@@ -36,6 +36,7 @@
 @interface NSURL(SimpleAgenda)
 + (BOOL)stringIsValidURL:(NSString *)string;
 + (NSURL *)URLWithString:(NSString *)string possiblyRelativeToURL:(NSURL *)base;
+- (NSString *)anonymousAbsoluteString;
 @end
 
 @interface GSXMLDocument(SimpleAgenda)
