@@ -10,6 +10,7 @@ version 0.42
 	* Fix URL handling for GroupDAV calendars, tested against
 	  Citadel and OGO
 	* Enable copy/paste on multiple elements (select with control key)
+	* Don't write authentication informations on the stdout (see ticket #17)
 
 version 0.41 (2010/03/15)
 	* Threads/memory pools/notifications fixes
